--- a/components/app.css
+++ b/components/app.css
@@ -6,9 +6,7 @@ body {
   margin-bottom: -25px;
 }
 .jumbotron {
-
-  background-image: -webkit-linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.15));
-  box-shadow: inset 0 0<D-R> 0 rgba(0,0,0,0.25);
+  background-image: -webkit-linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.05));
   // text-shadow: 0 1px 3px #222;
 }
 pre, code {
@@ -26,7 +24,8 @@ pre, code {
   padding: 50px 0 0 0;
   border: 1px solid black;
   background: black;
-  height: 135px;
+  height: 138px;
+  border-radius: 4px;
 }
 .console div.line {
   background: transparent;
